# ollamabuddy

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  Cargo.toml.broken  DEPLOYMENT.md  INTEGRATION_SUMMARY.md  INVESTIGATION_REPORT.md  PHASE_2_3_COMPLETION_REPORT.md  PRD10A_COMPLETION_REPORT.md  PRD10_COMPLETION_REPORT.md  PRD12.5_COMPLETION_REPORT.md  PRD12_COMPLETION_REPORT.md  PRD6_PROGRESS.md  PRD7_COMPLETION_REPORT.md  PRD7_FINAL_SUMMARY.md  PRD7_PROGRESS.md  PRD9_COMPLETION_REPORT.md  README.md  install.sh  organize_tests.sh  uninstall.sh
src/: config.rs  display_mode.rs  errors.rs  execution.rs  lib.rs  main.rs
src/advisor/: mod.rs
src/agent/: memory.rs  mod.rs  orchestrator.rs  state.rs
src/analysis/: convergence.rs  mod.rs  types.rs
src/bootstrap/: mod.rs
src/budget/: manager.rs  mod.rs  types.rs
src/cli/: args.rs  config.rs  mod.rs
src/context/: compressor.rs  counter.rs  mod.rs
src/core/: mod.rs
src/doctor/: mod.rs
src/integration/: agent.rs  commands.rs  mod.rs
src/memory/: episodic.rs  experience.rs  knowledge.rs  mod.rs  patterns.rs  types.rs  working.rs
src/models/: client.rs  manager.rs  mod.rs  types.rs
src/planning/: complexity.rs  hierarchical.rs  mod.rs  progress.rs  replanner.rs  strategies.rs  types.rs
src/rag/: context.rs  mod.rs  pipeline.rs
src/recovery/: adaptive.rs  mod.rs  types.rs
src/repl/: commands.rs  display.rs  events.rs  input.rs  mod.rs  session.rs
src/session/: learning.rs  mod.rs  persistence.rs
src/streaming/: client.rs  mod.rs  parser.rs
src/telemetry/: mod.rs
src/tools/: executor.rs  mod.rs  registry.rs  retry.rs  runtime.rs  security.rs  types.rs
src/types/: execution.rs  messages.rs  mod.rs
src/validation/: mod.rs  orchestrator.rs  types.rs  validator.rs
tests/: integration_test.rs  memory_integration_tests.rs  prd10_repl_integration.rs  prd10a_repl_execution.rs  prd9_convergence_integration.rs  prd9_recovery_integration.rs  prd9_validation_integration.rs
tests/memory/: mod.rs
(+22 files in other folders)
