[package]
name = "ollamabuddy"
version = "0.2.0"
edition = "2021"
authors = ["Jerome (Kubashen) Naidoo"]
description = "Turn any local Ollama model into a capable terminal agent"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client (streaming)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"


# Async traits (PRD 2)
async-trait = "0.1"

# Process execution (PRD 2)
bytes = "1.5"
rand = "0.8"
num_cpus = "1.16"

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = "0.5"

# Property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"

# Benchmarks will be added after implementation
# [[bench]]
# name = "token_counter_bench"
# harness = false
#
# [[bench]]
# name = "parser_bench"
# harness = false
